--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,20 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textview_fuwaText"
-        android:layout_margin="10dp"
+    <Button
+        android:id="@+id/button_start"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"   />
+        android:layout_height="wrap_content"
+        android:text="@string/start" />
 
+    <Button
+        android:id="@+id/button_choose"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/choose" />
 </LinearLayout>
 
 
