--- a/app/src/main/res/layout/activity_mark_text.xml
+++ b/app/src/main/res/layout/activity_mark_text.xml
@@ -10,6 +10,7 @@
         android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars = "vertical" />
+        android:scrollbars = "vertical"
+        android:textIsSelectable = "true"/>
 
 </LinearLayout>
