--- a/app/src/main/res/layout/activity_mark_text.xml
+++ b/app/src/main/res/layout/activity_mark_text.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    tools:context="com.example.bluejoe.myapplication.MarkText"
+    android:padding="30dp">
 
     <TextView
         android:id="@+id/text_view"
         android:layout_margin="10dp"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars = "vertical"
         android:textIsSelectable = "true"/>
+
 
 </LinearLayout>
