--- a/app/src/main/res/menu/selection_action_menu.xml
+++ b/app/src/main/res/menu/selection_action_menu.xml
@@ -2,9 +2,9 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/Informal22"
-        android:title="自定义22" />
+        android:id="@+id/human"
+        android:title="@string/人" />
     <item
-        android:id="@+id/Informal33"
-        android:title="自定义33" />
+        android:id="@+id/place"
+        android:title="@string/地点" />
 </menu>
