--- a/app/src/main/res/menu/selection_action_menu.xml
+++ b/app/src/main/res/menu/selection_action_menu.xml
@@ -7,4 +7,7 @@
     <item
         android:id="@+id/place"
         android:title="@string/地点" />
+    <item
+        android:id="@+id/cancel"
+        android:title="@string/取消"/>
 </menu>
