--- a/app/src/main/res/layout/activity_mark_text.xml
+++ b/app/src/main/res/layout/activity_mark_text.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.bluejoe.myapplication.MarkText"
-    android:padding="30dp">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/text_view"
         android:layout_margin="10dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars = "vertical"
