--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,14 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:background="#96EBF0">
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="7"
+        android:gravity="center"
+        android:textSize="60sp"
+        android:textColor="#AC92FA"
+        android:shadowColor="#131F1B"
+        android:shadowRadius="15"
+        android:shadowDx="8"
+        android:shadowDy="8"
+        android:textStyle="bold"
+        android:text="@string/entity_marking"/>
     <Button
         android:id="@+id/button_start"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/btn_style"
+        android:layout_gravity="center"
         android:text="@string/start" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:gravity="center"
+        android:text=""/>
 </LinearLayout>
-
 
 
