--- a/app/src/main/res/layout/text_list_item.xml
+++ b/app/src/main/res/layout/text_list_item.xml
@@ -10,5 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:textSize="20sp"/>
 </LinearLayout>
