--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,33 +4,93 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#96EBF0">
-    <TextView
-        android:id="@+id/title"
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="7"
-        android:gravity="center"
-        android:textSize="60sp"
-        android:textColor="#AC92FA"
-        android:shadowColor="#131F1B"
-        android:shadowRadius="15"
-        android:shadowDx="8"
-        android:shadowDy="8"
-        android:textStyle="bold"
-        android:text="@string/entity_marking"/>
-    <Button
-        android:id="@+id/button_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/btn_style"
-        android:layout_gravity="center"
-        android:text="@string/start" />
-    <TextView
+        android:gravity="center_vertical">
+
+        <TextView
+            android:id="@+id/title_entity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="60sp"
+            android:textColor="#AC92FA"
+            android:shadowColor="#131F1B"
+            android:shadowRadius="15"
+            android:shadowDx="8"
+            android:shadowDy="8"
+            android:textStyle="bold"
+            android:text="@string/entity"/>
+
+        <TextView
+            android:id="@+id/title_marking"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="60sp"
+            android:textColor="#AC92FA"
+            android:shadowColor="#131F1B"
+            android:shadowRadius="15"
+            android:shadowDx="8"
+            android:shadowDy="8"
+            android:textStyle="bold"
+            android:text="@string/marking"/>
+
+        <TextView
+            android:id="@+id/title_version"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:layout_marginEnd="25dp"
+            android:textSize="30sp"
+            android:textColor="#AC92FA"
+            android:shadowColor="#131F1B"
+            android:shadowRadius="15"
+            android:shadowDx="8"
+            android:shadowDy="8"
+            android:textStyle="bold"
+            android:text="@string/version"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:gravity="center"
-        android:text=""/>
+        android:layout_weight="3"
+        android:gravity="top|center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button_choose"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:padding="6dp"
+            android:background="@drawable/btn_style"
+            android:text="@string/select_text"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/button_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_style"
+            android:text="@string/start" />
+
+        <Button
+            android:id="@+id/button_default"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:padding="6dp"
+            android:background="@drawable/btn_style"
+            android:text="@string/select_default"
+            android:visibility="gone" />
+
+    </LinearLayout>
 </LinearLayout>
 
 
