--- a/app/src/main/res/layout/activity_mark_relation.xml
+++ b/app/src/main/res/layout/activity_mark_relation.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/sentence_text_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4" />
