--- a/app/src/main/res/layout/card_item_choose.xml
+++ b/app/src/main/res/layout/card_item_choose.xml
@@ -28,15 +28,15 @@
             android:src="@drawable/arrow_left"
             android:contentDescription="@string/实体1"
             />
-        <TextView
+        <com.weidongjian.meitu.wheelviewdemo.view.LoopView
+            android:id="@+id/loopview"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
             android:gravity="center"
             android:layout_gravity="center"
             android:background="@drawable/border_bottom"
-            android:text="夫妻"
-            android:maxLines="1" />
+            />
         <ImageView
             android:layout_width="40sp"
             android:layout_height="40sp"
