--- a/app/src/main/res/layout/activity_mark_relation.xml
+++ b/app/src/main/res/layout/activity_mark_relation.xml
@@ -12,19 +12,30 @@
         android:layout_weight="4"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
+        android:paddingTop="10dp"
         android:textIsSelectable="true"/>
 
-    <ListView
-        android:id="@+id/list_view"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6">
-    </ListView>
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        app:fabSize="normal"
-        android:src="@android:drawable/ic_input_add"/>
+        android:layout_weight="6"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp">
+
+        <ListView
+            android:id="@+id/list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ListView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            app:fabSize="normal"
+            android:src="@android:drawable/ic_input_add"/>
+    </FrameLayout>
 </LinearLayout>
