简单的点触选择实体

--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:padding="8dp">
         <TextView
+            android:id="@+id/cardtext1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
@@ -44,6 +45,7 @@
             android:contentDescription="@string/实体2"
             />
         <TextView
+            android:id="@+id/cardtext2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
