--- a/app/src/main/res/layout/activity_mark_relation.xml
+++ b/app/src/main/res/layout/activity_mark_relation.xml
@@ -1,19 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/sentence_text_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:paddingTop="10dp"
-        android:textIsSelectable="true"/>
+        android:layout_weight="4">
+
+        <Button
+            tools:ignore="NestedWeights"
+            android:id="@+id/text_smaller"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/minus"
+            android:layout_margin="2dp"
+            android:background="@drawable/text_size_btn_control"/>
+
+        <TextView
+            android:id="@+id/sentence_text_view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="10"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            android:paddingTop="10dp"
+            android:textIsSelectable="true"/>
+
+        <Button
+            android:id="@+id/text_larger"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/plus"
+            android:layout_margin="2dp"
+            android:background="@drawable/text_size_btn_control"/>
+
+    </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -39,5 +66,7 @@
             app:rippleColor="#66A96B"
             app:fabSize="normal"
             android:src="@android:drawable/ic_input_add"/>
+
     </FrameLayout>
+
 </LinearLayout>
