--- a/app/src/main/res/drawable/text_size_btn_normal.xml
+++ b/app/src/main/res/drawable/text_size_btn_normal.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="#E0E0E0"/>
+            <solid android:color="#F7F7F7"/>
             <corners android:topLeftRadius="3dip"
                 android:topRightRadius="3dip"
                 android:bottomRightRadius="3dip"
