--- a/app/src/main/res/anim/move_btn_start.xml
+++ b/app/src/main/res/anim/move_btn_start.xml
@@ -2,15 +2,15 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:anim/accelerate_interpolator">
     <alpha
+        android:duration="500"
+        android:fillAfter="true"
         android:fromAlpha="1"
-        android:toAlpha="0"
-        android:duration="500"
-        android:fillAfter="true" />
+        android:toAlpha="0" />
     <translate
-        android:fromXDelta="0"
-        android:toXDelta="0"
-        android:fromYDelta="0"
-        android:toYDelta="50"
         android:duration="500"
-        android:fillAfter="true" />
+        android:fillAfter="true"
+        android:fromXDelta="0"
+        android:fromYDelta="0"
+        android:toXDelta="0"
+        android:toYDelta="50" />
 </set>
