--- a/app/src/main/res/anim/move_title_up.xml
+++ b/app/src/main/res/anim/move_title_up.xml
@@ -2,15 +2,15 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:anim/accelerate_decelerate_interpolator">
     <alpha
+        android:duration="2000"
+        android:fillAfter="true"
         android:fromAlpha="0"
-        android:toAlpha="1"
-        android:duration="2000"
-        android:fillAfter="true" />
+        android:toAlpha="1" />
     <translate
-        android:fromXDelta="000"
-        android:toXDelta="0"
-        android:fromYDelta="100"
-        android:toYDelta="0"
         android:duration="2000"
-        android:fillAfter="true" />
+        android:fillAfter="true"
+        android:fromXDelta="000"
+        android:fromYDelta="100"
+        android:toXDelta="0"
+        android:toYDelta="0" />
 </set>
