--- a/app/src/main/res/anim/show_btn_start.xml
+++ b/app/src/main/res/anim/show_btn_start.xml
@@ -2,8 +2,8 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:anim/accelerate_interpolator">
     <alpha
-        android:fromAlpha="0"
-        android:toAlpha="1"
         android:duration="500"
-        android:fillAfter="true" />
+        android:fillAfter="true"
+        android:fromAlpha="0"
+        android:toAlpha="1" />
 </set>
