--- a/app/src/main/res/drawable/menu_btn_normal.xml
+++ b/app/src/main/res/drawable/menu_btn_normal.xml
@@ -2,11 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="#48C3BE"/>
-            <corners android:topLeftRadius="10dip"
-                android:topRightRadius="10dip"
-                android:bottomRightRadius="10dip"
-                android:bottomLeftRadius="10dip" />
+            <solid android:color="#48C3BE" />
+            <corners android:bottomLeftRadius="10dip" android:bottomRightRadius="10dip" android:topLeftRadius="10dip" android:topRightRadius="10dip" />
         </shape>
     </item>
 </selector>
