--- a/app/src/main/res/layout/activity_mark_text.xml
+++ b/app/src/main/res/layout/activity_mark_text.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/text_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars = "vertical"
-        android:textIsSelectable = "true"/>
+        android:scrollbars="vertical"
+        android:textIsSelectable="true" />
 
 
 </LinearLayout>
