--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,69 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/card_view"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:cardBackgroundColor="#FBFFA3"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="5dp">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            app:cardBackgroundColor="#FBFFA3"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="5dp">
+            android:padding="8dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp">
-                <TextView
-                    android:id="@+id/cardtext1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="4"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:background="@drawable/border_bottom"
-                    android:maxLines="1"
-                    android:textSize="20sp"
-                    android:textColor="#0D625E"/>
-                <ImageView
-                    android:layout_width="40sp"
-                    android:layout_height="40sp"
-                    android:src="@drawable/arrow_left"
-                    android:contentDescription="@string/实体1"
-                    />
-                <TextView
-                    android:id="@+id/cardrelation"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="4"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:background="@drawable/border_bottom"
-                    android:maxLines="1"
-                    android:textSize="20sp"/>
-                <ImageView
-                    android:layout_width="40sp"
-                    android:layout_height="40sp"
-                    android:src="@drawable/arrow_right"
-                    android:contentDescription="@string/实体2"
-                    />
-                <TextView
-                    android:id="@+id/cardtext2"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="4"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:background="@drawable/border_bottom"
-                    android:maxLines="1"
-                    android:textSize="20sp"
-                    android:textColor="#0D625E"/>
+            <TextView
+                android:id="@+id/cardtext1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="4"
+                android:background="@drawable/border_bottom"
+                android:gravity="center"
+                android:maxLines="1"
+                android:textColor="#0D625E"
+                android:textSize="20sp" />
 
-            </LinearLayout>
-        </android.support.v7.widget.CardView >
-        </FrameLayout>
+            <ImageView
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:contentDescription="@string/实体1"
+                android:src="@drawable/arrow_left" />
+
+            <TextView
+                android:id="@+id/cardrelation"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="4"
+                android:background="@drawable/border_bottom"
+                android:gravity="center"
+                android:maxLines="1"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:contentDescription="@string/实体2"
+                android:src="@drawable/arrow_right" />
+
+            <TextView
+                android:id="@+id/cardtext2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="4"
+                android:background="@drawable/border_bottom"
+                android:gravity="center"
+                android:maxLines="1"
+                android:textColor="#0D625E"
+                android:textSize="20sp" />
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+</FrameLayout>
