--- a/app/src/main/res/layout/card_item_choose.xml
+++ b/app/src/main/res/layout/card_item_choose.xml
@@ -3,10 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -18,42 +17,44 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp">
+
             <TextView
                 android:id="@+id/cardtext1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_weight="2"
                 android:gravity="center"
-                android:layout_gravity="center"
-                android:textSize="20sp"
-                android:textColor="#0D625E"/>
+                android:textColor="#0D625E"
+                android:textSize="20sp" />
+
             <ImageView
                 android:layout_width="40sp"
                 android:layout_height="200sp"
-                android:src="@drawable/arrow_left"
                 android:contentDescription="@string/实体1"
-                />
+                android:src="@drawable/arrow_left" />
+
             <com.weigan.loopview.LoopView
                 android:id="@+id/loopView"
                 android:layout_width="100dp"
-                android:layout_height="200dp"
-            />
+                android:layout_height="200dp" />
+
             <ImageView
                 android:layout_width="40sp"
                 android:layout_height="200sp"
-                android:src="@drawable/arrow_right"
                 android:contentDescription="@string/实体2"
-                />
+                android:src="@drawable/arrow_right" />
+
             <TextView
                 android:id="@+id/cardtext2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_weight="2"
                 android:gravity="center"
-                android:layout_gravity="center"
-                android:textSize="20sp"
-                android:textColor="#0D625E"/>
+                android:textColor="#0D625E"
+                android:textSize="20sp" />
 
         </LinearLayout>
-    </android.support.v7.widget.CardView >
+    </android.support.v7.widget.CardView>
 </FrameLayout>
