--- a/app/src/main/res/layout/text_list_item.xml
+++ b/app/src/main/res/layout/text_list_item.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="10dp"
-    android:paddingEnd="10dp">
+    android:paddingEnd="10dp"
+    android:paddingStart="10dp">
 
     <TextView
         android:id="@+id/text_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="7"
         android:layout_gravity="start|center_vertical"
+        android:layout_marginBottom="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:singleLine="true"
+        android:layout_weight="7"
         android:ellipsize="middle"
-        android:textSize="20sp"/>
+        android:singleLine="true"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/text_mentioned"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
         android:layout_gravity="center_vertical"
-        android:gravity="end|center_vertical"
+        android:layout_marginBottom="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:singleLine="true"
+        android:layout_weight="3"
         android:ellipsize="end"
-        android:textSize="16sp"/>
+        android:gravity="end|center_vertical"
+        android:singleLine="true"
+        android:textSize="16sp" />
 </LinearLayout>
