--- a/app/src/main/res/layout/text_list_item.xml
+++ b/app/src/main/res/layout/text_list_item.xml
@@ -13,20 +13,19 @@
         android:layout_marginBottom="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:layout_weight="7"
+        android:layout_weight="1"
         android:ellipsize="middle"
         android:singleLine="true"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/text_mentioned"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginBottom="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:layout_weight="3"
         android:ellipsize="end"
         android:gravity="end|center_vertical"
         android:singleLine="true"
